# model-zoo

./: README.md
docs/: 环境安装指南.md
samples/Resnet50/: README.md
samples/Resnet50/cpp/: CMakeLists.txt  main.cpp  resnet.cpp  resnet.hpp
samples/Resnet50/docs/: Resnet50_Export_Guide.md
samples/Resnet50/python/: Resnet.py  export.py  infer.py  quantize.py  readme.md
samples/Resnet50/python/utils/: eval_imagenet.py
samples/Resnet50/scripts/: download.sh
samples/YOLO11/: README.md
samples/YOLO11/cpp/: CMakeLists.txt
samples/YOLO11/cpp/include/: timer.hpp  yolo11.hpp
samples/YOLO11/cpp/src/: main.cpp  yolo11.cpp
samples/YOLO11/docs/: YOLO11_Export_Guide.md
samples/YOLO11/python/: YOLO11.py  export.py  infer.py  postprocess_numpy.py  quantize.py  utils.py
samples/YOLO11/python/utils/: coco_eval.py
samples/YOLO11/scripts/: download.sh
samples/YOLOv8_det/: README.md
samples/YOLOv8_det/cpp/: CMakeLists.txt  main.cpp  yolov8.cpp  yolov8.hpp
samples/YOLOv8_det/docs/: YOLOv8_Export_Guide.md
samples/YOLOv8_det/python/: README.md  YOLOv8.py  export.py  infer.py  postprocess_numpy.py  quantize.py
samples/YOLOv8_det/scripts/: download.sh
samples/mobilenetv2/: README.md
samples/mobilenetv2/cpp/: CMakeLists.txt  main.cpp  mobilenetv2.cpp  mobilenetv2.hpp
samples/mobilenetv2/python/: export.py  infer.py  mobilenetv2.py  quantize.py
samples/mobilenetv2/python/utils/: eval_imagenet.py
samples/mobilenetv2/scripts/: download.sh
